--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,6 @@
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-    
-    <!-- Системные разрешения для отладки -->
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:name=".App2ProxyApplication"
@@ -47,9 +44,15 @@
         android:requestLegacyExternalStorage="true"
         android:preserveLegacyExternalStorage="true"
         android:enableOnBackInvokedCallback="true"
+        android:hardwareAccelerated="true"
+        android:largeHeap="false"
+        android:allowClearUserData="true"
+        android:allowTaskReparenting="false"
+        android:killAfterRestore="true"
+        android:restoreAnyVersion="false"
         tools:targetApi="35">
 
-        <!-- Автозапускающийся сервис с правильными параметрами для Android 14+ -->
+        <!-- Автозапускающийся сервис -->
         <service
             android:name=".AutoStartService"
             android:enabled="true"
@@ -61,67 +64,140 @@
                 android:value="Восстановление правил iptables при загрузке системы" />
         </service>
 
-        <!-- BroadcastReceiver с улучшенной совместимостью для Android 15 -->
+        <!-- BroadcastReceiver -->
         <receiver
             android:name=".BootReceiver"
             android:enabled="true"
             android:exported="true"
             android:directBootAware="true">
             <intent-filter android:priority="1000">
-                <!-- Основные события загрузки -->
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
-                
-                <!-- События пользователя -->
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="999">
                 <action android:name="android.intent.action.USER_PRESENT" />
                 <action android:name="android.intent.action.USER_UNLOCKED" />
-                
-                <!-- События приложения -->
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="998">
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
                 <action android:name="android.intent.action.PACKAGE_REPLACED" />
-                
-                <!-- Быстрая загрузка (производители) -->
+                <data android:scheme="package" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="997">
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="miui.intent.action.MIUI_APPLICATION_START" />
-                
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:scheme="package" />
             </intent-filter>
         </receiver>
 
-        <!-- Activity для настроек с исправлением вылета -->
+        <!-- Activity для настроек - ИСПРАВЛЕНА ДЛЯ ВЫЛЕТОВ -->
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
             android:label="@string/action_settings"
             android:theme="@style/Theme.App2Proxy"
             android:parentActivityName=".MainActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:taskAffinity=""
+            android:excludeFromRecents="false"
+            android:finishOnTaskLaunch="false"
+            android:clearTaskOnLaunch="false"
+            android:noHistory="false"
+            android:configChanges="orientation|screenSize|keyboardHidden|keyboard|navigation"
+            android:windowSoftInputMode="adjustResize"
+            android:hardwareAccelerated="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
+            <!-- Интент для системных настроек -->
+            <intent-filter>
+                <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
-        <!-- Главная активность -->
+        <!-- Главная активность - ИСПРАВЛЕНА ДЛЯ ВЫЛЕТОВ -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.App2Proxy"
             android:launchMode="singleTop"
+            android:taskAffinity=""
+            android:excludeFromRecents="false"
+            android:finishOnTaskLaunch="false"
+            android:clearTaskOnLaunch="false"
+            android:noHistory="false"
+            android:configChanges="orientation|screenSize|keyboardHidden|keyboard|navigation"
+            android:windowSoftInputMode="adjustResize"
+            android:hardwareAccelerated="true"
             android:screenOrientation="unspecified">
+            
+            <!-- Основной launcher интент -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             
-            <!-- Интент для открытия из настроек -->
+            <!-- Интент для открытия из настроек системы -->
             <intent-filter>
                 <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            
+            <!-- Интент для совместимости с системными настройками -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="app2proxy" />
+            </intent-filter>
+            
+            <!-- Интент для обработки настроек приложения -->
+            <intent-filter>
+                <action android:name="android.settings.APPLICATION_DETAILS_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="package" />
+            </intent-filter>
         </activity>
+        
+        <!-- Alias активность для совместимости с системными настройками -->
+        <activity-alias
+            android:name=".AppInfoActivity"
+            android:targetActivity=".MainActivity"
+            android:exported="true"
+            android:enabled="true"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.settings.APPLICATION_DETAILS_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </activity-alias>
+
+        <!-- Provider для совместимости -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge" />
+            
+        <!-- ContentProvider для предотвращения вылетов -->
+        <provider
+            android:name=".AppInfoProvider"
+            android:authorities="${applicationId}.appinfo"
+            android:exported="false"
+            android:enabled="true"
+            android:grantUriPermissions="false"
+            android:multiprocess="false" />
 
     </application>
 </manifest>
